feat: track where pending files are merged into and report Filename on FileUploaded
Fixes: https://github.com/moov-io/achgateway/issues/147
