# openapi.yaml
@@ -365,6 +365,12 @@ paths:
           schema:
             type: string
             example: SD-live-1234567890
+        - name: filename
+          in: query
+          description: Filename of uploaded file
+          schema:
+            type: string
+            example: SD_LIVE_20240229_1100.txt
       responses:
         '200':
           description: List of pending files in the shard.
